# projet_c

./: README.md  fares.c  fichier2.h  fonctions.c  fonctions.h  fonctions2.c  main.c  mohamedamine.c
Equipements Agricoles/: Makefile.am  Makefile.in  config.status  equipements.txt  project5.glade
Equipements Agricoles/autom4te.cache/: requests
Equipements Agricoles/src/: Makefile  Makefile.in  add  callbacks.c  equipement.c  interface.c.bak  interface.h  main.c  project5
project5/: Makefile
project5/src/: Makefile.am  add  callbacks.c  callbacks.h  equipement.h  interface.c
smart_farm/: Makefile  Makefile.am  Makefile.in  absenteisme.txt  capteur.txt  commande.txt  config.h  config.status  configure  configure.in  equipements.txt  fiche_absenteisme.txt  file.txt  inscription.txt  naissance.txt  smart_farm.glade  smart_farm.gladep.bak  temperature.txt
smart_farm/autom4te.cache/: output.0  requests  traces.0  traces.1
smart_farm/po/: Makefile  (+1 more)
smart_farm/src/: Makefile  Makefile.am  Makefile.in  absence.c  absence.h  absenteisme.c  absenteisme.h  callbacks.c  callbacks.h  capteur.c  capteur.h  client  client.c  client.h  client.h.gch  commande.c  commande.h  equipement.c  equipement.h  fichier.c  fonction.c  fonction.h  fonctionMH.h  global.h  inscription.txt  interface.c  interface.c.bak  interface.h.bak  main.c  mb_seche.c  mb_seche.h  ouvrier.c  ouvrier.h  plantation.c  plantation.h  smart_farm
smart_farm/src/.deps/: absenteisme.Po  callbacks.Po  capteur.Po  client.Po  commande.Po  fichier.Po  fonction.Po  mb_seche.Po  ouvrier.Po  plantation.Po
(+2 files in other folders)
